resources/public/css/ganja.css
body {
    background-image: url('../img/bg.png');
    background-repeat: repeat;
    background-size: auto;
    background-color: #000;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 2.0em;
}

h1 {
    font-size: 2.5em;
}

h3 {
    font-size: 1.5em;
}

p {
    font-size: .9em;
}

button {
    font-size: .9em;
}

.banner {
    max-width: 100%;
    min-width: 100%;
}

#navbar {
    font-size: 1.1em;
}

ul.nav a.login-dropdown-toggle,
ul.nav a.navbar-ganja-links,
div#navbar a,
div.navbar-login a {
    color: #bababa;
}

nav.navbar {
    color: #efefef;
}

#navbar, .container-fluid {
    padding-left: 0;
    margin-left: 0;
}

.container-fluid {
    padding-right: 0;
    margin-right: 0;
}

.navbar-ganja {
    background-color: #212121;
    border-color: #000;
}

.content {
    background-color: #212121;
    padding: 5px;
    padding-right: 15px;
    border-radius: 6px;
}

.page-content {
    border-radius: 6px;
    background-color: #fff;
    margin: 5px;
    padding-top: 10px;
    padding-left: 25px;
    padding-right: 25px;
    padding-bottom: 30px;
    height: 100%;
    width: 100%;
}

.page-content h3 {
    margin-top: 25px;
    margin-bottom: 15px;
}

.news-section {
    padding: 0 30px 0 15px;
}

.news-content {
    padding: 15px 5px;
    border-top: 3px solid #cdcdcd;
}

.news-form-box {
    padding: 5px 20px 15px 20px;
    width: 500px;
    background-color: #efefef;
}

.news-form-box-title {
    padding: 10px;
    margin: 0 auto;
    display: table;
}

.news-form-box-title h3 {
    display: inline;
}

.news-header {
    margin: 0;
    padding: 0;
    width: 140px;
}

.edit-link {
    float: right;
    margin-top: 22px;
    cursor: pointer;
}

.close-button {
    border: none;
}

.modal-content {
    padding: 0;
    margin: 0;
    width: 500px;
}

.modal-dialog {
    width: 500px;
}

.inputGroup {
    padding: 5px;
}

.form-control {
    font-size: 1em;
}

.dropdown-menu {
    background-color: #212121;
}

.login-dropdown {
    position: absolute;
    top: 100%;
    right: 0;
    z-index: 1000;
    display: none;
    float: left;
    height: 230px;
    width: 265px;
    padding: 5px 0;
    margin: 2px 0 0;
    font-size: 14px;
    text-align: left;
    background-color: #212121;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, .15);
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
}

ul.login-list {
    margin: 10px 12px 10px 15px;
    padding: 0;
}

ul.login-list li {
    list-style: none;
    padding: 6px 3px;
}

ul.login-list input.login-input {
    width: 230px;
    padding: 5px;
    border-radius: 5px;
    color: #212121;
}

ul.login-list button.btn {
    float: right;
    padding: 5px 10px;
    margin-right: 0;
    color: #212121;
    background-color: #f47921;
}

ul.login-list input.login-cb {
    width: 20px;
    margin: 0;
}

li#remember-me {
    clear: both;
    padding-top: 15px;
    font-size: .9em;
}

li#forgot-pass {
    clear: both;
    font-size: .9em;
}

#registration-header {
    padding: 5px;
}

.registration {
    width: 100%;
}

.warning {
    color: red;
    font-size: .9em;
}

.input-group {
    margin: 20px 10px;
}

label {
    display: block;
}

.form-control.reg-drop {
    width: 80px;
}

.form-control.reg-email {
    width: 300px;
}

.form-control.reg-area {
    width: 400px;
    resize: vertical;
}

.form-control.news-area {
    resize: vertical;
}

.btn {
    padding: 5px 10px;
    color: #212121;
    font-weight: bold;
    background-color: #f47921;
}

.right-button-wrapper {
    display: table;
    width: 100%;
}

.right-button {
    text-align: right;
    margin: 5px 5px 0 0;
}

.register-button {
    padding: 5px;
    margin: 10px 5px;
    height: 50;
}

footer {
    color: #bababa;
    padding-bottom: 40px;
    padding-top: 20px;
    text-align: center;
}

@media screen and (max-width: 768px) {
    .container, #navbar, .content, .page-content {
        width: 100%;
    }
    
    #navbar, .container-fluid {
        padding-right: 15px;
        padding-left: 15px;
        margin-right: auto;
        margin-left: auto;
    }

    div#navbar {
        margin: 0;
        width: 100%;
        border-top: 2px solid #bababa;
    }
    
    ul.login-list button.btn,
    ul.login-list input.login-input {
        float: none;
        width: 100%;
    }
    
    div.login-dropdown {
        position: static;
        width: 100%;
        float: none;
        border: 0;
        border-top: 2px solid #bababa;
        padding-top: 5px;
        margin-top: 13px;
        -webkit-box-shadow: none;
        box-shadow: none;
    }

    div.login-dropdown-mobile {
        padding-top: 10px;
        padding-bottom: 5px;
    }
    
    ul.login-list input {
        width: 100%;
    }

    .container {
        padding-left: 0;
        padding-right: 0;
        margin-left: 0;
        margin-right: 0;
    }

    .content, .page-content {
        border-radius: 0;
    }

    .navbar {
        padding-bottom: 0;
        margin-bottom: 0;
    }

    .navbar-header {
        height: 25px;
    }

    ul.nav {
        padding: 0;
        margin: 3px;
        width: 100%;
    }

    button.navbar-toggle {
        float: left;
        margin-left: 10px;
        border: none;
    }
    
    input.registration-input {
        width: 100%;
    }
    
    .registration-textbox {
        width: 100%;
    }
    
    .registration button.btn {
        width: 100%;
        padding-left: 0;
        margin-left: 0;
    }

    footer {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}

